# cs184-snow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
docs/: bloopers.html  index.html
glad/include/glad/: glad.h
glad/src/: glad.c
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
linmath/: CMakeLists.txt
src/: camera.h  force.cpp  force.h  grid.cpp  grid.h  interpolation.cpp  interpolation.h  main.cpp  particle.cpp  particle.h  shader.h  snowsim.cpp  snowsim.h
src/collision/: collisionObject.h  cube.cpp  cube.h  plane.cpp  plane.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h
src/misc/: physics_params.h  sampling.cpp  sampling.h  sphere_drawing.cpp  sphere_drawing.h  threadpool.h
src/shaders/: camera.vert  camera.vs  simple.frag  simple.fs  simple.vert
vis/: Makefile  Particles.cpp  Particles.h  main.cpp  sim
